# ai-family-planning-bias

./: .gitignore  README.md  RESEARCH_REPORT.md  pyproject.toml
logs/conversation/: 01_initial_exploration.jsonl  01_initial_exploration.md  02_framework_implementation.jsonl  02_framework_implementation.md  03_paired_experiment.jsonl  03_paired_experiment.md  04_full_scale_run.jsonl  04_full_scale_run.md  README.md
results/: report.md  scores.csv
results/paired/: paired_report.md  research_report.md  scores.csv
scripts/: jsonl_to_markdown.py
src/: analysis.py  dataset_generator.py  eval_task.py  paired_analysis.py  paired_dataset_generator.py  prompt_templates.py  scorers.py
tests/: test_analysis.py  test_dataset_generator.py  test_paired_analysis.py  test_paired_dataset_generator.py  test_scorers.py
