[project]
name = "ai-eugenics-test"
version = "0.1.0"
description = "Evaluation framework to measure AI family planning bias across demographics"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "statsmodels",
    "openai",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
